--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
 <body>
     <main>
+        <div class="pop-up">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/Warning_icon.svg/420px-Warning_icon.svg.png" alt="" width="10%">
+            <h2>Zoom Out For Better Look</h2>
+        </div>
+
         <section class="glass">
             <div class="dashboard">
                 <div class="user">
